NOTICK: Upgrade to Gradle 6.9.1. (#207)
* Upgrade to Gradle 6.9.1.
* Upgrade more test component dependencies:
- Corda Tokens SDK 1.1 -> 1.2.3
- Scala 2.13.3 -> 2.13.6
- Log4J 2.13.3 -> 2.14.1
- Logback 1.2.3 -> 1.2.5
* Replace deprecated publish-utils plugin.