@@ -97,7 +97,8 @@ ext {
     jvmArgs = provider {
         current().java9Compatible ? [
           '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
-          '--add-opens', 'java.base/java.net=ALL-UNNAMED'
+          '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+          '--illegal-access=warn'
         ].join(',') : ''
     }
 }
